# Django3

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
contact/: forms.py  service.py  tasks.py  urls.py  views.py
contact/migrations/: 0001_initial.py
movie_app/: admin.py  apps.py  forms.py  models.py  translation.py  urls.py  views.py
movie_app/migrations/: 0001_initial.py  0002_alter_ratingstar_options.py  0003_actor_description_en_actor_description_ru_and_more.py
movie_app/static/css/: bootstrap.css
movie_app/templates/: base.html
movie_app/templates/contact/tags/: form.html
movie_app/templates/include/: footer.html  header.html  pagination.html  sidebar.html
movie_app/templates/movie_app/: actor.html  movie_detail.html  movie_list.html  movies.html
movie_app/templatetags/: movie_tag.py
movies_project/: celery.py  settings.py  urls.py
