[tool.poetry]
name = "django3"
version = "0.1.0"
description = ""
authors = ["joseph7Cartaphilus <artem.harov.120@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.5"
pillow = "^9.4.0"
psycopg2 = "^2.9.5"
redis = "^4.4.2"
poetry = "^1.3.2"
celery = "^5.2.7"
django-ckeditor = "^6.5.1"
django-recaptcha = "^3.0.0"
django-modeltranslation = "^0.18.7"
pre-commit = "^3.0.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
